--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <label for="password">Password</label>
         <input type="password" placeholder="Password" id="password">
 
-        <button>Log In</button>
+        <button>Entrar</button>
     </form>
 </body>
 </html>
